--- a/birhday.html
+++ b/birhday.html
@@ -9,6 +9,10 @@
 <body>
   <div class="container">
     <h1>عيد ميلاد سعيد يا شهد 🎉<br><br> shad Ameer</h1>
+   <h1 class="birthday-text">
+      <span>B</span><span>I</span><span>R</span><span>T</span>
+      <span>H </span><span>D</span><span>A</span><span>Y</span>
+    </h1>
     <button id="musicBtn" class="btn">تشغيل الموسيقى 🎵</button>
     <canvas id="balloonCanvas"></canvas>
   </div>
