--- a/birhday.html
+++ b/birhday.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="ar">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>عيد ميلاد سعيد يا شهد</title>
-  <link rel="stylesheet" href="birth.css">
-</head>
-<body>
-  <div class="container">
-    <h1>عيد ميلاد سعيد يا شهد 🎉<br><br> shad Ameer</h1>
-   <h1 class="birthday-text">
-      <span>B</span><span>I</span><span>R</span><span>T</span>
-      <span>H </span><span>D</span><span>A</span><span>Y</span>
-    </h1>
-    <button id="musicBtn" class="btn">تشغيل الموسيقى 🎵</button>
-    <canvas id="balloonCanvas"></canvas>
-  </div>
-  <audio id="bgMusic" loop controls src="Mahmoud_El_Esseily_Kol_Sana_Wadi_Degla_محمود_العسيلي_كل_سنة_وادي.mp3"></audio>
-  <script src="birth.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>عيد ميلاد سعيد يا شهد</title>
+    <link rel="stylesheet" href="birth.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>
+        عيد ميلاد سعيد يا شهد 🎉<br /><br />
+        shad Ameer
+      </h1>
+      <h1 class="birthday-text">
+        <span>B</span><span>I</span><span>R</span><span>T</span> <span>H </span
+        ><span>D</span><span>A</span><span>Y</span>
+      </h1>
+      <button id="musicBtn" class="btn">تشغيل الموسيقى 🎵</button>
+      <canvas id="balloonCanvas"></canvas>
+    </div>
+    <audio
+      id="bgMusic"
+      loop
+      controls
+      src="Mahmoud_El_Esseily_Kol_Sana_Wadi_Degla_محمود_العسيلي_كل_سنة_وادي.mp3"
+    ></audio>
+    <script src="birth.js"></script>
+  </body>
 </html>
